# kratos-selfservice-wasm

./: .gitignore  .gitmodules  Cargo.toml  Dioxus.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json
.github/workflows/: docker-build.yml  docker-publish.yml
assets/: tailwind.css
schemas/kratos/email-password/: kratos.yml
src/: kratos.rs  main.rs
src/components/: alert.rs  mod.rs  ory_ajax_form_builder.rs  ory_error.rs  ory_form_builder.rs  ory_log_out.rs  ory_state.rs  session_cookie.rs
src/views/: error.rs  login.rs  mod.rs  recovery.rs  register.rs  session.rs  settings.rs  verification.rs
