[package]
name = "kratos-selfservice-rust"
version = "0.1.0"
authors = ["JES <justin@jes.contact>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
chrono = { version = "0.4.41", default-features = false, features = ["now", "wasmbind"]}
gloo-timers = { version = "0.3", optional = true  }
# Work around for https://github.com/ory/kratos-client-rust/issues/3
ory-kratos-client-wasm = "0.1.1"
serde_json = "1.0"
web-sys = { version = "0.3.77", features = ["Headers", "HtmlDocument", "Window"] }


[features]
default = ["web"]
web = ["dioxus/web", "dep:gloo-timers"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
