[package]
name = "kratos-selfservice-rust"
version = "0.2.1"
authors = ["JES <justin@jes.contact>"]
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory"]

[dependencies]
dioxus = { version = "0.7", features = ["router"] }
chrono = { version = "0.4", default-features = false, features = [
  "now",
  "wasmbind",
] }
ory-kratos-client-wasm = "0.2"
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Headers", "HtmlDocument", "Window"] }


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
